Add screen gallery section to controller.html

--- a/public/mobile/controller.html
+++ b/public/mobile/controller.html
@@ -48,6 +48,12 @@
     <button style="background:#ffaa00; color:white;" onclick="finishWork()">保存</button>
   </div>
 
+  <div id="screen-gallery" class="screen">
+  <h2 style="color: #555;">PCの画面を見てね！</h2>
+  <div style="font-size: 50px; margin-bottom: 20px;">🖼️</div>
+  <button onclick="location.reload()" style="background: #ffaa00; color: white;">🏠 ホームにもどる</button>
+　</div>
+
   <script src="/socket.io/socket.io.js"></script>
   <script src="controller.js"></script>
 </body>
